# aurora

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aurora1024.rs  aurora512.rs  aurora_seal1024.rs  aurora_seal512.rs  lib.rs  main.rs  output_format.rs
src/internal/: gf256.rs  mod.rs  prng.rs
tests/: integration_test.rs
