[package]
name = "aurora"
version = "0.1.0"
edition = "2024"

[features]
default = []
print_vectors = []

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[dependencies]
base64 = "0.22"
hex = "0.4"
base32 = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
rayon = "1.8"
